<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yawyl</string>
    <string name="menu_synchronisation">Sync</string>
    <string name="action_bar_search">Search</string>

    <string name="start_items_activity">Items</string>
    <string name="start_songs_activity">Songs</string>

    <string name="preferences_category_connection">Connection</string>
    <string name="preference_ip_dialog_title">Enter server ip address</string>
    <string name="preference_ip_summary">Server ip address</string>
    <string name="preference_ip">IP</string>
    <string name="menu_preferences">Preferences</string>
    <string name="fragment_preferences">Preferences</string>
    <string name="preference_mountpoint">Context</string>
    <string name="preference_mountpoint_summary">Server mount-point</string>
    <string name="preference_mountpoint_dialog_title">Enter server mountpoint</string>
    <string name="preference_port">Port</string>
    <string name="preference_port_summary">Server port</string>
    <string name="preference_port_dialog_title">Enter server port</string>

    <string name="item_details_activity">Item Details</string>
    <string name="song_details_activity">Song Details</string>
    <string name="menu_map">Map</string>
    <string name="show_on_map">View on Map</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="menu_song_map">Maps</string>
    <string name="menu_map_songs">Artists locations</string>
    <string name="menu_logout">Logout</string>

</resources>
