<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preferences_category_connection">

        <EditTextPreference
                android:key="preference_ip"
                android:title="@string/preference_ip"
                android:summary="@string/preference_ip_summary"
                android:dialogTitle="@string/preference_ip_dialog_title"
                android:defaultValue="192.168.0.18"/>

        <EditTextPreference
                android:key="preference_port"
                android:title="@string/preference_port"
                android:summary="@string/preference_port_summary"
                android:dialogTitle="@string/preference_port_dialog_title"
                android:defaultValue="3000"/>

        <EditTextPreference
                android:key="preference_mountpoint"
                android:title="@string/preference_mountpoint"
                android:summary="@string/preference_mountpoint_summary"
                android:dialogTitle="@string/preference_mountpoint_dialog_title"
                android:defaultValue="zebia"/>

    </PreferenceCategory>

</PreferenceScreen>

